xm/theme/browser/stylesheets/main.css
/* Stylesheet for the 'eXtremeManagement' Plone theme */

h1#project-header {
    border-style: none;
}

h1#project-header a {
    font-weight: bold;
    font-size: 200%;
    color: #436976 !important;
    padding:0.2em 0.5em 0 1em;
}

#portal-personaltools li dt {
    clear: right;
    float: right;
}

#portal-personaltools a {
    padding:0pt 0.5em;
}

.actionMenu .actionMenuHeader a {
    color:#578308;
    cursor:pointer;
    padding:0pt 0.5em;
    text-decoration:none;
    display:block;
}

/* *** The Global Project tabs. *** */
#project-globalnav {
  background-color: transparent;
  padding: 0em 0em 0em 2em;
  white-space: nowrap;
  list-style: none;
  margin: 0 0 1.4em 0;
  line-height: normal;
  text-align: left;
}

#project-globalnav li {
  float: left;
}

#project-globalnav li a {
  border-color: #8CACBB;
  border-width: 1px;
  border-style: solid solid none solid;
  margin-right: 0.5em;
  padding: 0 1.25em;
  text-decoration: none;
}

#project-globalnav li.selected a,
#project-globalnav li a:hover {
  background-color: #DEE7EC;
  border: 1px solid #8CACBB;
  border-bottom: 1px solid #DEE7EC;
}

#portal-globalnav li.plain a {
  background: transparent;
}

/* *** Start submenus *** */
#project-globalnav .actionMenu {
  margin-top: -1px;
}

#project-globalnav .actionMenu .actionMenuHeader a {
  color: #436976;
}

#my-projects-menu .project-submenu ul,
#project-globalnav .project-submenu ul {
  background-color: #DEE7EC;
  border: 1px solid #8CACBB;
}

#project-globalnav .project-submenu li {
  float: none;
  text-align: left;
  border-width: 0;
}

#project-globalnav .project-submenu li a {
  border-width: 0;
  margin: 0;
  padding: 0 3px 0 3px;
}

#my-projects-menu .project-submenu li a:hover,
#project-globalnav .project-submenu li a:hover {
  color: #FFFFFF;
  background-color: #8CACBB;
}

#project-globalnav .project-submenu li.selected {
  border-width: 0;
  margin: 0;
  padding: 0 3px 0 3px;
  color: #FFFFFF;
  background-color: #8CACBB;
}

#project-globalnav .project-submenu li.selected a {
  color: #FFFFFF;
  background-color: #8CACBB;
  margin: 0;
  padding: 0;
}

